tests: Migrate aggregation unit tests to assertj